add: aggiunta tabella

--- a/index.html
+++ b/index.html
@@ -62,5 +62,49 @@
   <button> bottone</button>
   <a href="">link</a>
 
+  <h2>Tabella</h2>
+
+  <section>
+    <!-- tabella -->
+    <table>
+      <!-- intestazione -->
+      <thead>
+        <!-- riga-->
+        <tr>
+          <th> heading 1</th>
+          <th> heading 2</th>
+          <th> heading 3</th>
+        </tr>
+      </thead>
+
+      <!-- corpo della tabella -->
+      <tbody>
+        <!-- riga -->
+        <tr>
+          <td>Cella 1</td>
+          <td>cella 2</td>
+          <td>ella 3</td>
+        </tr>
+
+        <tr>
+          <td>Cella 1</td>
+          <td>cella 2</td>
+          <td>ella 3</td>
+        </tr>
+
+      </tbody>
+
+      <!-- footer della tabella -->
+      <tfoot>
+        <!-- riga -->
+        <tr>
+          <td>footer 1</td>
+          <td>footer 2</td>
+          <td>footer 3</td>
+        </tr>
+      </tfoot>
+
+    </table>
+  </section>
 </body>
 </html>
